# CUB-Capstone

./: README.md  image_dedupe.py
classical_computer_vision/: Color_Lane_Detection.ipynb  Integrated Row Detection.ipynb  Lane_Detection.ipynb  README.md  canny.py  coloredgedetection.py  dog.py  laplacian.py  prewitt.py  robert_cross.py  shen_castan.py  singlecoloredgedetection.py  sobel.py
classical_computer_vision/cpp_row_detection/: CMakeLists.txt  README.md
deep-learning-annotations/: corn_row_sun_n_shade_bottom.xml
deep_learning/: easy_img_resize.py
row_detection/: CMakeLists.txt  README.md  package.xml
row_detection/src/: ImageProc.cpp  ImageProc.hpp  README cv_row_detection.md  README dl_row_detection.md  README test_publisher.md  RowDetection.cpp  RowDetection.hpp  cv_row_detection.cpp  dl_row_detection.cpp  test_publisher.cpp
row_detection/src/KeyPointDetection/: README.md  setup.py
row_detection/src/KeyPointDetection/predict/: __main__.py
trimble-ml/: splitter.ipynb
